--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "live-server": "^1.2.1",
     "node-sass": "4.5.3",
     "normalize.css": "7.0.0",
-    "react": "16.0.0",
-    "react-dom": "16.0.0",
+    "react": "16.3.0",
+    "react-dom": "16.3.0",
     "react-modal": "2.2.2",
     "react-router-dom": "4.2.2",
+    "react-select": "^2.1.2",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
+    "styled-components": "^4.1.2",
     "validator": "8.0.0",
     "webpack": "3.1.0",
     "webpack-dev-server": "2.5.1"
