--- a/package.json
+++ b/package.json
@@ -9,20 +9,22 @@
     "dev-server": "webpack-dev-server"
   },
   "dependencies": {
-    "babel-cli": "6.26.0",
-    "babel-core": "6.25.0",
-    "babel-loader": "7.1.1",
-    "babel-plugin-transform-class-properties": "6.24.1",
-    "babel-preset-env": "1.7.0",
-    "babel-preset-react": "6.24.1",
-    "css-loader": "0.28.4",
+    "@babel/cli": "7.8.4",
+    "@babel/core": "7.8.7",
+    "babel-loader": "8.0.6",
+    "@babel/plugin-proposal-class-properties": "7.8.3",
+    "@babel/preset-env": "7.8.7",
+    "@babel/preset-react": "7.8.3",
+    "css-loader": "3.4.2",
     "normalize.css": "7.0.0",
-    "react": "16.8.0",
+    "react": "16.13.0",
     "react-dom": "16.13.0",
     "react-router-dom": "5.1.2",
-    "style-loader": "0.18.2",
+    "react-router-prop-types": "1.0.4",
+    "style-loader": "1.1.3",
     "validator": "8.0.0",
-    "webpack": "3.1.0",
-    "webpack-dev-server": "2.5.1"
+    "webpack": "4.42.0",
+    "webpack-cli": "3.3.11",
+    "webpack-dev-server": "3.10.3"
   }
 }
